-Created a StartWindow Class with New Canvas & Load Canvas Functions -Moved MyFrame Class from main to MyFrame.h -Removed Save as XML/PNG and Load XML filem buttons from the Main Application

--- a/EzPaint.vcxproj
+++ b/EzPaint.vcxproj
@@ -141,6 +141,8 @@
   <ItemGroup>
     <ClInclude Include="colorpane.h" />
     <ClInclude Include="drawingcanvas.h" />
+    <ClInclude Include="MyFrame.h" />
+    <ClInclude Include="StartWindow.h" />
     <ClInclude Include="path.h" />
     <ClInclude Include="pensizepane.h" />
     <ClInclude Include="selectablepane.h" />
